# Swift-Agent

./: .gitignore
local-ios-agent/rust-core/: Cargo.toml  README.md  build.rs
local-ios-agent/rust-core/src/: app_service.rs  ffi_bridge.rs  lib.rs
local-ios-agent/rust-core/src/agent_package/: exporter.rs  installer.rs  lockfile.rs  manifest.rs  mod.rs  reader.rs  upgrade_planner.rs  validator.rs
local-ios-agent/rust-core/src/context/: archive.rs  assembler.rs  branch_projector.rs  budget.rs  compaction.rs  contribution.rs  debug_snapshot.rs  graph.rs  injection_policy.rs  mod.rs  model_input.rs  policy.rs  preview.rs  prompt_frame.rs  prompt_layers.rs  segment.rs  (+1 more)
local-ios-agent/rust-core/tests/: agent_builder_agent_os.rs  agent_loop.rs  agent_package_agent_os.rs  approval.rs  architecture_agent_os.rs  context_compaction.rs  context_projection.rs  context_prompt.rs  contract.rs  core_types.rs  desktop_minicpm_provider.rs  ffi_bridge.rs  golden.rs  inference_backend_agent_os.rs  integration.rs  lint.rs  local_llm_backend.rs  local_llm_provider.rs  memory_agent_os.rs  memory_foundation.rs  mock_provider.rs  model_provider_agent_os.rs  ondevice_minicpm_provider.rs  openai_chat_adapter.rs  protocol_dto_unknown.rs  protocol_plugin_module.rs  protocol_registry.rs  provider_registry.rs  runtime_mock.rs  runtime_provider_selection.rs  runtime_provider_streaming.rs  runtime_replay.rs  runtime_tool_orchestration.rs  security_approval_protocol.rs  security_data_egress.rs  security_manager.rs  session_tree.rs  sqlite_store.rs  storage_transaction.rs  stream_batcher.rs  (+6 more)
(+508 files in other folders)
