[package]
name = "local_ios_agent_runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "local_ios_agent_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
link-mock-local-inference = []
link-llama-cpp-local-inference = ["link-mock-local-inference"]
link-llama-cpp-mtmd-local-inference = ["link-llama-cpp-local-inference"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
